[gd_scene load_steps=3 format=3 uid="uid://stats_panel_001"]

[ext_resource type="Script" path="res://view/hud/entity_stats_panel.gd" id="1_stats_panel"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.12, 0.1, 0.08, 0.75)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.9, 0.7, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.5)

[node name="EntityStatsPanel" type="PanelContainer"]
offset_left = 900.0
offset_top = 100.0
offset_right = 1200.0
offset_bottom = 500.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
script = ExtResource("1_stats_panel")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="EntityNameLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 16
text = "Entity Name"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/HeaderBar"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "[X]"
flat = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="PreviewAndFlavorContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="EntityPreviewContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/PreviewAndFlavorContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2

[node name="FlavorTextLabel" type="Label" parent="MarginContainer/VBoxContainer/PreviewAndFlavorContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.85, 0.82, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = ""
autowrap_mode = 3
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="StatsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8
